frontend/test/should_fail/method_model_inh_ovrrd_failxf2.grg
#using "method_model_inh_ovrrd_failxf2.gm"
